# sad-repo

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  README.md  colab_quickstart.ipynb  llm-log.txt  pyproject.toml  requirements.txt
artifacts/: controller_anchor_seed_0.json  controller_anchor_seed_1.json  controller_anchor_seed_2.json  controller_anchor_seed_3.json  controller_anchor_seed_4.json  controller_anchor_seed_5.json  controller_anchor_seed_6.json  controller_anchor_seed_7.json  controller_anchor_seed_8.json  controller_anchor_seed_9.json  multiseed_summary.csv  multiseed_summary.md  paraphrase_inspection.json  pressure_probe.json  sequence_seed_0.json  sequence_seed_1.json  sequence_seed_2.json  sequence_seed_3.json  sequence_seed_4.json  sequence_seed_5.json  sequence_seed_6.json  sequence_seed_7.json  sequence_seed_8.json  sequence_seed_9.json  smoke_results.json  sweeps_summary.csv  sweeps_summary.md
docs/: CURRENT_STATUS.md  INSTRUCTIONS.md  colab_rerun_2026-07-15.md  experiment_plan.md  output.txt  problem_statement.md  roadmap_v0.2.md  roadmap_v0.3.md  tinyllama_readiness.md
notes/: literature_map_stub.md
scripts/: README.md  _bootstrap.py  evaluate_sequence.py  inspect_paraphrase.py  run_baselines.py  run_caprank.sh  run_controller.py  run_dims.ps1  run_dims.sh  run_multiseed.ps1  run_pressure.ps1  run_pressure.sh  run_retention.ps1  run_retention.sh  run_sweeps.sh  smoke_test.py  summarize_multiseed.py  summarize_sweeps.py
tests/: conftest.py  test_adapters.py  test_coherence_state.py  test_data.py  test_metrics.py  test_multiseed_summary.py  (+3 more)
(+169 files in other folders)
